integration/fixtures/k8s-session-persistence/gateway-sticky/gateway-backend-whoami-header-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-header
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
