integration/fixtures/k8s-session-persistence/gateway-sticky/gateway-httproute-header.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-whoami-header
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-header.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-header
          port: 80
      sessionPersistence:
        sessionName: X-Session-ID
        type: Header
